--- a/dsgrid_project/datasets/benchmark/aeo2021/reference/commercial/End_Uses/dataset.toml
+++ b/dsgrid_project/datasets/benchmark/aeo2021/reference/commercial/End_Uses/dataset.toml
@@ -1,21 +1,22 @@
-data_source = "AEO2021 Reference Case"
+dataset_type = "benchmark"
+data_source = "NEMS Commercial Module"
 dataset_id = "aeo2021_ref_com_energy_end_uses"
 data_schema_type = "one_table"
-dataset_type = "benchmark" # <--- ?
-path = "/Users/lliu2/Documents/GitHub/dsgrid-project-StandardScenarios/dsgrid_project/datasets/benchmark/aeo2021/reference/commercial/End Uses/data/" # <---
+path = "/Users/lliu2/Documents/GitHub/dsgrid-project-StandardScenarios/dsgrid_project/datasets/benchmark/aeo2021/reference/commercial/End_Uses/data/"
 description = "AEO 2021 Reference Case Commercial Energy End Uses Projection: 2013-2050"
-origin_creator = "Lixi Liu"
-origin_organization = "NREL"
+origin_creator = "Kevin Jarzomski"
+origin_organization = "EIA"
 origin_contributors = [ "Lixi Liu", "Meghan Mooney", "Elaine Hale",]
-origin_project = "Energy Benchmarking and Projection" # <---
+origin_project = "EIA AEO 2021"
 origin_date = "2021-10-05"
 origin_version = "0.1.0"
-source = "Data derived from AEO 2021 detailed sector files sent from EIA"
+source = "Data extracted from AEO 2021 detailed commercial sector files sent from EIA"
 data_classification = "low"
-tags = [ "commercial", "benchmark", "projection", "aeo", "2021", "dsgrid_v0.2.0",]
+tags = [ "commercial", "benchmark", "projection", "aeo2021", "dsgrid_v0.2.0",]
 trivial_dimensions = [ "sector", "scenario", "data_source", "weather_year", "model_year"]
 
 [data_schema]
+load_data_column_dimension = "metric"
 
 [[dimensions]]
 dimension_id = "us_census_divisions__c98c6bb0-5c5a-4d36-971e-5082cb453cea"
@@ -48,7 +49,7 @@ type = "model_year"
 version = "1.0.0"
 
 [[dimensions]]
-dimension_id = "reference_scenario__5d35997c-d3d6-4f43-afb8-175b365e3345" # <--- ?
+dimension_id = "aeo-reference-scenario__78beddaa-3049-4c6b-8f88-36fb319f846f"
 type = "scenario"
 version = "1.0.0"
 
@@ -58,7 +59,7 @@ type = "data_source"
 version = "1.0.0"
 
 [[dimensions]]
-dimension_id = "annual_time-2013_to_2050__9f358984-6b4b-4ec8-9dce-279b327dedc8"
+dimension_id = "annual_time-2013_to_2050__23a1a841-9929-43a3-b11b-d867f8e2300b"
 type = "time"
 version = "1.0.0"
 
