edited tempo subsector mapping
removed no drivers

--- a/dsgrid_project/datasets/sector_models/tempo/dimensions.toml
+++ b/dsgrid_project/datasets/sector_models/tempo/dimensions.toml
@@ -24,10 +24,10 @@ description = """
 TEMPO demographic/geographic/vehicle bins.
 
 This is a cross-join of the following supplemental dimensions:
-* Composition
-* Income
-* Urbanity
-* Vehicle Size Class
+* Composition (Single Driver, Some Drivers Smaller, Some Drivers Larger)
+* Income (Low Income, Middle Income, High Income)
+* Urbanity (Rural, Small Town, Suburban, Second City, Urban)
+* Vehicle Size Class (Compact, Midsize, SUV, Pickup)
 * Tech (PHEV25/PHEV50/BEV100/BEV300) """
 
 
