schema edits to tempo dataset.toml for registration

--- a/dsgrid_project/datasets/sector_models/tempo/dataset.toml
+++ b/dsgrid_project/datasets/sector_models/tempo/dataset.toml
@@ -2,11 +2,11 @@
 # TEMPO Dataset Configuration File
 # --------------------------------------
 
-dataset_id = "tempo-standard-scenarios-2021"
+dataset_id = "tempo_conus_2022"
 dataset_type = "sector_model"
 data_source = "tempo"
-model_name = "TEMPO"
-path = "/projects/dsgrid/tempo/data_020822"
+
+path = "/projects/dsgrid/tempo/data_02082022"
 description = """
 CONUS 2022 TEMPO county-level results for PEV charging.""" 
 
@@ -21,6 +21,9 @@ data_classification = "low"
 tags = [ "transportation", "conus-2022", "reference", "tempo"]
 data_schema_type = "standard" 
 trivial_dimensions = [ "sector", "weather_year", "scenario", "data_source"] # TODO: for non-dummy version, we will remove scenario from trivial dimensions
+
+[data_schema]
+load_data_column_dimension = "metric"
 
 [[dimensions]]
 type = "geography"
