fix duplicate keys

--- a/dsgrid_project/datasets/sector_models/comstock/dimensions.toml
+++ b/dsgrid_project/datasets/sector_models/comstock/dimensions.toml
@@ -43,7 +43,7 @@ description = """
 CONUS 2022 - ComStock end uses (N=21, 4 fuel types)
 """
 
-# [[dimensions]] # already exists
+[[dimensions]] # already exists
 type = "scenario"
 name = "Conus-2022"
 file = "dimensions/scenario_conus_2022_reference.csv"
