--- a/dsgrid_project/datasets/sector_models/comstock/dimensions.toml
+++ b/dsgrid_project/datasets/sector_models/comstock/dimensions.toml
@@ -83,21 +83,21 @@ CONUS 2022 - ComStock end uses (N=21, 4 fuel types)
 # Model year: 2018
 # """
 
-[[dimensions]] # for real dataset
-name = "Time-2012-UTC-8760-hourly-periodEnding-dropDec31-total-Hour1Start-localRangesTZ"
-type = "time"
-module = "dsgrid.dimension.standard"
-class = "Time"
-description = "Time dimension, 2012 hourly UTC, period-ending, starts at Hour 1, 8760 timestamps, drop most Dec31, total value"
-time_type = "datetime"
-measurement_type = "total"
-str_format = "%Y-%m-%d %H:%M:%S"
-frequency = "P0DT1H0M0.000000S"
-# leap_day_adjustment = "drop_dec31"
-time_interval_type = "period_ending"
-timezone = "UTC"
-ranges = [{start = "2012-01-01 01:00:00", end = "2012-12-31 00:00:00"}]
-ranges_timezone = "LOCAL"
+# [[dimensions]] # for real dataset
+# name = "Time-2012-UTC-8760-hourly-periodEnding-dropDec31-total-Hour1Start-localRangesTZ"
+# type = "time"
+# module = "dsgrid.dimension.standard"
+# class = "Time"
+# description = "Time dimension, 2012 hourly UTC, period-ending, starts at Hour 1, 8760 timestamps, drop most Dec31, total value"
+# time_type = "datetime"
+# measurement_type = "total"
+# str_format = "%Y-%m-%d %H:%M:%S"
+# frequency = "P0DT1H0M0.000000S"
+# # leap_day_adjustment = "drop_dec31"
+# time_interval_type = "period_ending"
+# timezone = "UTC"
+# ranges = [{start = "2012-01-01 01:00:00", end = "2012-12-31 00:00:00"}]
+# ranges_timezone = "LOCAL"
 
 
 # [[dimensions]] # already exists, for time-wrapped dataset
