--- a/dsgrid_project/datasets/sector_models/resstock/dimension_mappings.toml
+++ b/dsgrid_project/datasets/sector_models/resstock/dimension_mappings.toml
@@ -33,3 +33,15 @@ version = "1.0.0"
 type = "scenario"
 dimension_id = "dsgrid_conus_2022_scenarios__fcfa2979-d6c7-4811-9879-4ba09fe86777"
 version = "1.0.0"
+
+[[mappings]]
+description = "ResStock CONUS 2022 energy end uses mapping to project"
+file = "dimension_mappings/metric_to_metric.csv"
+[mappings.from_dimension]
+type = "metric"
+dimension_id = "conus_2022-resstock_energy_enduses_kwh__e84ff30a-3db3-4369-8108-6b619d12761b"
+version = "1.0.0"
+[mappings.to_dimension]
+type = "metric"
+dimension_id = "conus-2022-detailed-end-uses-kwh__8b12e233-b2eb-41c3-b784-373274120d3b"
+version = "1.0.0"
