--- a/dsgrid_project/dimension_mappings.toml
+++ b/dsgrid_project/dimension_mappings.toml
@@ -1,6 +1,7 @@
 [[mappings]]
 description = "Maps Comstock US Counties 2020 L48 to CensusRegion"
 file = "dimension_mappings/base_to_supplemental/lookup_county_to_censusregion.csv"
+mapping_type = "many_to_one_aggregation"
 [mappings.from_dimension]
 dimension_id = "us_counties_2020_l48__3f48928c-e700-4e1d-b7fb-c35a52d076a0"
 type = "geography"
@@ -13,6 +14,7 @@ version = "1.0.0"
 [[mappings]]
 description = "Maps Comstock US Counties 2020 L48 to CensusDivision"
 file = "dimension_mappings/base_to_supplemental/lookup_l48_county_to_censusdivision.csv"
+mapping_type = "many_to_one_aggregation"
 [mappings.from_dimension]
 type = "geography"
 dimension_id = "us_counties_2020_l48__3f48928c-e700-4e1d-b7fb-c35a52d076a0"
@@ -25,6 +27,7 @@ version = "1.0.0"
 [[mappings]]
 description = "Maps Comstock US Counties 2020 L48 to State"
 file = "dimension_mappings/base_to_supplemental/lookup_county_to_state.csv"
+mapping_type = "many_to_one_aggregation"
 [mappings.from_dimension]
 dimension_id = "us_counties_2020_l48__3f48928c-e700-4e1d-b7fb-c35a52d076a0"
 type = "geography"
