--- a/dsgrid_project/datasets/sector_models/comstock/dimension_mappings.toml
+++ b/dsgrid_project/datasets/sector_models/comstock/dimension_mappings.toml
@@ -1,12 +1,17 @@
 [[mappings]]
+dimension_type = "geography"
 description = "ComStock CONUS 2022 counties to project counties"
 file = "dimension_mappings/county_to_county.csv"
 mapping_type = "one_to_one"
-[mappings.from_dimension]
-type = "geography"
-dimension_id = "conus_2022-comstock_us_county_fip__1b08dae6-502a-4094-80bf-e5717c92fdeb"
-version = "1.0.0"
-[mappings.to_dimension]
-type = "geography"
-dimension_id = "us_counties_2020_l48__3f48928c-e700-4e1d-b7fb-c35a52d076a0"
-version = "1.0.0"
+
+[[mappings]]
+dimension_type = "model_year"
+description = "Dummy model year mapping that repeats 2018 for all CONUS 2022 model years"
+file = "../resstock/dimension_mappings/model_year_to_model_year.csv"
+mapping_type = "duplication"
+
+[[mappings]]
+dimension_type = "scenario"
+description = "ResStock and ComStock scenario dataset-to-project dimension mapping for the CONUS 2022 project"
+file = "../resstock/dimension_mappings/scenario_to_scenario.csv"
+mapping_type = "duplication"
