--- a/dsgrid_project/datasets/sector_models/resstock/dataset.toml
+++ b/dsgrid_project/datasets/sector_models/resstock/dataset.toml
@@ -31,45 +31,108 @@ load_data_column_dimension = "metric"
 
 [[dimensions]]
 type = "geography"
-dimension_id = "conus_2022-resstock_us_county_fip__06491cea-f139-43d5-9761-d89520689a51"
-version = "1.0.0"
+name = "conus_2022-resstock_US_county_FIP"
+file = "dimensions/conus_2022-resstock_geography_county_fips.csv"
+module = "dsgrid.dimension.standard"
+class = "County"
+description = """
+CONUS 2022 - ResStock US county in original FIP code (N=3,108)
+"""
 
 [[dimensions]]
 type = "sector"
-dimension_id = "residential-sector__d58ca399-bb2c-49b7-aebf-dae270b9fa67"
-version = "1.0.0"
+name = "residential-sector"
+file = "dimensions/sector_residential.csv"
+module = "dsgrid.dimension.standard"
+class = "Sector"
+description = """
+Residential sector only
+"""
 
 [[dimensions]]
 type = "subsector"
-dimension_id = "conus_2022-resstock_building_types__767a84dc-30a6-4b31-88e5-1e52fa3d4f41"
-version = "1.0.0"
+name = "conus_2022-resstock_building_types"
+file = "dimensions/conus_2022-resstock_subsectors.csv"
+module = "dsgrid.dimension.standard"
+class = "Subsector"
+description = """
+CONUS 2022 - ResStock building types (N=5)
+"""
 
 [[dimensions]]
 type = "metric"
-dimension_id = "conus_2022-resstock_energy_enduses_kwh__e84ff30a-3db3-4369-8108-6b619d12761b"
-version = "1.0.0"
+name = "conus_2022-resstock_energy_enduses_kwh"
+file = "dimensions/conus_2022-resstock_end_uses.csv"
+module = "dsgrid.dimension.standard"
+class = "EnergyEndUse"
+description = """
+CONUS 2022 - ResStock end uses (N=48, 5 fuel types)
+"""
 
 [[dimensions]]
 type = "data_source"
-dimension_id = "resstock-data-source__704d4737-5b87-4201-bffd-10deae4b99c7"
-version = "1.0.0"
+name = "ResStock-Data-Source"
+file = "dimensions/data_source_resstock.csv"
+module = "dsgrid.dimension.standard"
+class = "DataSource"
+description = """
+ResStock only data source
+"""
 
 [[dimensions]]
 type = "scenario"
-dimension_id = "conus-2022-reference__a90f3ea4-b0ed-4c08-a15a-242fb802b156"
-version = "1.0.0"
+name = "Conus-2022-reference"
+file = "dimensions/scenario_conus_2022_reference.csv"
+module = "dsgrid.dimension.standard"
+class = "Scenario"
+description = """
+Scenario: CONUS (Continental U.S.) 2022 Reference
+"""
 
 [[dimensions]]
+type = "model_year"
+name = "Model-Year-2018"
+file = "dimensions/model_year_2018.csv"
+module = "dsgrid.dimension.standard"
+class = "ModelYear"
+description = """
+Model year, 2018 only
+"""
+
+# [[dimensions]] # for real dataset
+# name = "Time-2012-UTC-8784-hourly-periodEnding-total-Hour6Start-localRangesTZ"
+# type = "time"
+# module = "dsgrid.dimension.standard"
+# class = "Time"
+# description = "Time dimension, 2012 hourly UTC, period-ending, starts at Hour 6, 8784 timestamps, total value, local ranges_timezone"
+# time_type = "datetime"
+# measurement_type = "total"
+# str_format = "%Y-%m-%d %H:%M:%S"
+# frequency = "P0DT1H0M0.000000S"
+# leap_day_adjustment = "none"
+# time_interval_type = "period_ending"
+# timezone = "UTC"
+# ranges = [{start = "2012-01-01 01:00:00", end = "2013-01-01 00:00:00"}]
+# ranges_timezone = "LOCAL"
+
+
+[[dimensions]] # for time-wrapped dataset
+name = "Time-2012-UTC-8784-hourly-periodEnding-total-Hour0Start"
+type = "time"
+module = "dsgrid.dimension.standard"
+class = "Time"
+description = "Time dimension, 2012 hourly UTC, period-ending, starts at Hour 0, 8784 timestamps, total value"
+time_type = "datetime"
+measurement_type = "total"
+str_format = "%Y-%m-%d %H:%M:%S"
+frequency = "P0DT1H0M0.000000S"
+leap_day_adjustment = "none"
+time_interval_type = "period_ending"
+timezone = "UTC"
+ranges = [{start = "2012-01-01 00:00:00", end = "2012-12-31 23:00:00"}]
+
+[[dimension_references]]
 type = "weather_year"
 dimension_id = "2012_weather_year__78aeebf8-788c-4ffa-8df2-f581cf0e4d96"
 version = "1.0.0"
 
-[[dimensions]]
-type = "model_year"
-dimension_id = "model-year-2018__055f9044-b09b-4372-830c-b6f08dd7ecc1"
-version = "1.0.0"
-
-[[dimensions]] # time-wrapped data
-type = "time"
-dimension_id = "time-2012-utc-8784-hourly-periodending-total-hour0start__8ae089c3-733c-4db8-92a0-01f01db49cbd"
-version = "1.0.0"
