--- a/dsgrid_project/project.toml
+++ b/dsgrid_project/project.toml
@@ -35,90 +35,168 @@ version = "1.0.0"
 # Base Dimensions
 # ------------------------------------------------------
 [[dimensions.base_dimensions]]
-dimension_id = "us_counties_2020_l48__3f48928c-e700-4e1d-b7fb-c35a52d076a0"
+description = """
+US counties for L48, Census 2020 vintage, no territories
+"""
+file = "dimensions/counties.csv"
+name = "US Counties 2020 L48"
 type = "geography"
-version = "1.0.0"
+class = "County"
 
 [[dimensions.base_dimensions]]
-dimension_id = "standard_scenarios_2021_sectors_-_com-res-tra-only__e1a83d86-2c7c-4cc8-88a3-27681c0b54a5"
+class = "Sector"
+description = """
+dsgrid Standard Scenarios 2021 Sectors; Commercial, Residential, Transportation  Only
+"""
+file = "dimensions/sectors.csv"
+module = "dsgrid.dimension.standard"
+name = "Standard Scenarios 2021 Sectors - Com-Res-Tra-Only"
 type = "sector"
-version = "1.0.0"
 
 [[dimensions.base_dimensions]]
-dimension_id = "conus-2022-detailed-subsectors__d285bf0f-2aa0-4c4a-a7cb-81fc03239516"
 type = "subsector"
-version = "1.0.0"
+name = "CONUS-2022-Detailed-Subsectors"
+file = "dimensions/subsectors.csv"
+module = "dsgrid.dimension.standard"
+class = "Subsector"
+description = "dsgrid CONUS 2022 Subsectors"
 
 # [[dimensions.base_dimensions]] # TODO: this is what we ultimately want to be using for the project
-# dimension_id = "conus-2022-detailed-end-uses__00b6ea6a-b464-4baf-b142-63cab05c2be5"
 # type = "metric"
-# version = "1.0.0"
+# name = "CONUS-2022-Detailed-End-Uses"
+# file = "dimensions/enduses.csv"
+# module = "dsgrid.dimension.standard"
+# class = "EnergyEndUse"
+# description = "dsgrid CONUS 2022 End Uses"
 
-[[dimensions.base_dimensions]] # TODO: this is for the dummy data deliverable; remove when ready and replace with above
-dimension_id = "conus-2022-detailed-end-uses-kwh__8b12e233-b2eb-41c3-b784-373274120d3b"
+[[dimensions.base_dimensions]] # TODO: this is for the dummy data deliverable
 type = "metric"
-version = "1.0.0"
+name = "CONUS-2022-Detailed-End-Uses-kWh"
+file = "dimensions/enduses_kwh.csv"
+module = "dsgrid.dimension.standard"
+class = "EnergyEndUse"
+description = "dsgrid CONUS 2022 End Uses w/ all units in kWh"
 
 [[dimensions.base_dimensions]]
-dimension_id = "2012_weather_year__78aeebf8-788c-4ffa-8df2-f581cf0e4d96"
-type = "weather_year"
-version = "1.0.0"
-
-[[dimensions.base_dimensions]]
-dimension_id = "model_years_2010_to_2050_with_2_year_intervals__b26a5cd8-816c-44de-8648-a0a8b082b9a0"
+class = "ModelYear"
+description = """
+Model year, 2010-2050, every other year
+"""
+file = "dimensions/model_years.csv"
+module = "dsgrid.dimension.standard"
+name = "Model Years 2010 to 2050 with 2 year intervals"
 type = "model_year"
-version = "1.0.0"
 
 [[dimensions.base_dimensions]]
-dimension_id = "dsgrid_conus_2022_scenarios__fcfa2979-d6c7-4811-9879-4ba09fe86777"
+class = "Scenario"
+description = """
+Scenarios for the dsgrid CONUS 2022 project, which include a Reference scenario
+and two light-duty vehicle electrification scenarios
+"""
+file = "dimensions/scenarios.csv"
+module = "dsgrid.dimension.standard"
+name = "dsgrid CONUS 2022 scenarios"
 type = "scenario"
-version = "1.0.0"
 
 [[dimensions.base_dimensions]]
-dimension_id = "standard_scenarios_2021_datasources_-_comstock-resstock-tempo-only__bb99920b-1d45-4500-844e-ccf19a0be83b"
+class = "DataSource"
+description = """
+dsgrid Standard Scenarios 2021 Data Sources; ComStock, TEMPO, ResStock Only
+"""
+file = "dimensions/sources.csv"
+module = "dsgrid.dimension.standard"
+name = "Standard Scenarios 2021 DataSources - ComStock-ResStock-TEMPO-Only"
 type = "data_source"
-version = "1.0.0"
 
 [[dimensions.base_dimensions]]
-dimension_id = "time-2012-utc-houlry-periodbeginning-nodst-noleapdayadjustment-total__28b148e2-1dd4-461b-abe8-484addd3d553"
+class = "Time"
+frequency = "P0DT1H0M0.000000S"
+name = "Time-2012-UTC-houlry-periodBeginning-noDST-noLeapDayAdjustment-total"
+ranges = [{start = "2012-01-01 00:00:00", end = "2013-12-31 23:00:00"}]
 type = "time"
-version = "1.0.0"
+time_type = "datetime"
+leap_day_adjustment = "none"
+description = """
+Time dimension, 2012 hourly UTC, hour-beginning, no DST, no Leap Day Adjustment, total value
+"""
+time_interval_type = "period_beginning"
+str_format = "%Y-%m-%d %H:%M:%S"
+timezone = "UTC"
+measurement_type = "total"
+
+[[dimensions.base_dimensions]]
+class = "WeatherYear"
+description = """
+Weather year, 2012 only
+"""
+file = "dimensions/weather_years.csv"
+module = "dsgrid.dimension.standard"
+name = "2012 Weather Year"
+type = "weather_year"
 
 # ------------------------------------------------------
 # Supplemental Dimensions
 # ------------------------------------------------------
 [[dimensions.supplemental_dimensions]]
-dimension_id = "us_states__caef7924-b019-4081-a08f-5da8f451ed23"
+class = "State"
+description = """
+US States
+"""
+file = "dimensions/supplemental/states.csv"
+module = "dsgrid.dimension.standard"
+name = "US States"
 type = "geography"
-version = "1.0.0"
 
 [[dimensions.supplemental_dimensions]]
-dimension_id = "us_census_regions__81589d89-7575-4ac2-8ee3-4a3f24e1595f"
+class = "CensusRegion"
+description = """
+US Census Regions
+"""
+file = "dimensions/supplemental/census_regions.csv"
+name = "US Census Regions"
 type = "geography"
-version = "1.0.0"
 
 [[dimensions.supplemental_dimensions]]
-dimension_id = "us_census_divisions__c98c6bb0-5c5a-4d36-971e-5082cb453cea"
+class = "CensusDivision"
+description = """
+US Census Divisions
+"""
+file = "dimensions/supplemental/census_divisions.csv"
+name = "US Census Divisions"
 type = "geography"
-version = "1.0.0"
 
 # ------------------------------------------------------
 # Dimension Mappings
 # ------------------------------------------------------
 [[dimension_mappings.base_to_supplemental]]
-from_dimension_type = "geography"
-mapping_id = "us_counties_2020_l48__us_census_regions__f1627a71-0d01-4801-a9df-a2a2296480b5"
-to_dimension_type = "geography"
-version = "1.0.0"
+description = "Maps Comstock US Counties 2020 L48 to CensusRegion"
+file = "dimension_mappings/base_to_supplemental/lookup_county_to_censusregion.csv"
+mapping_type = "many_to_one_aggregation"
+[dimension_mappings.base_to_supplemental.from_dimension]
+name = "US Counties 2020 L48"
+type = "geography"
+[dimension_mappings.base_to_supplemental.to_dimension]
+name = "US Census Regions"
+type = "geography"
 
 [[dimension_mappings.base_to_supplemental]]
-from_dimension_type = "geography"
-mapping_id = "us_counties_2020_l48__us_census_divisions__2391abb7-1b68-42d4-b0b8-aef81cb5ae9e"
-to_dimension_type = "geography"
-version = "1.0.0"
+description = "Maps Comstock US Counties 2020 L48 to CensusDivision"
+file = "dimension_mappings/base_to_supplemental/lookup_l48_county_to_censusdivision.csv"
+mapping_type = "many_to_one_aggregation"
+[dimension_mappings.base_to_supplemental.from_dimension]
+type = "geography"
+name = "US Counties 2020 L48"
+[dimension_mappings.base_to_supplemental.to_dimension]
+name = "US Census Divisions"
+type = "geography"
 
 [[dimension_mappings.base_to_supplemental]]
-from_dimension_type = "geography"
-mapping_id = "us_counties_2020_l48__us_states__1fdd6b1a-e61a-46cc-8670-5e6156256457"
-to_dimension_type = "geography"
-version = "1.0.0"
+description = "Maps Comstock US Counties 2020 L48 to State"
+file = "dimension_mappings/base_to_supplemental/lookup_county_to_state.csv"
+mapping_type = "many_to_one_aggregation"
+[dimension_mappings.base_to_supplemental.from_dimension]
+name = "US Counties 2020 L48"
+type = "geography"
+[dimension_mappings.base_to_supplemental.to_dimension]
+name = "US States"
+type = "geography"
