--- a/dsgrid_project/project.toml
+++ b/dsgrid_project/project.toml
@@ -35,13 +35,14 @@ version = "1.0.0"
 # Base Dimensions
 # ------------------------------------------------------
 [[dimensions.base_dimensions]]
+class = "County"
 description = """
 US counties for L48, Census 2020 vintage, no territories
 """
 file = "dimensions/counties.csv"
+module = "dsgrid.dimension.standard"
 name = "US Counties 2020 L48"
 type = "geography"
-class = "County"
 
 [[dimensions.base_dimensions]]
 class = "Sector"
@@ -50,32 +51,39 @@ dsgrid Standard Scenarios 2021 Sectors; Commercial, Residential, Transportation 
 """
 file = "dimensions/sectors.csv"
 module = "dsgrid.dimension.standard"
-name = "Standard Scenarios 2021 Sectors - Com-Res-Tra-Only"
+name = "Sectors - Com-Res-Tra-Only"
 type = "sector"
 
 [[dimensions.base_dimensions]]
-type = "subsector"
-name = "CONUS-2022-Detailed-Subsectors"
+class = "Subsector"
+description = """
+dsgrid CONUS 2022 Subsectors
+"""
 file = "dimensions/subsectors.csv"
 module = "dsgrid.dimension.standard"
-class = "Subsector"
-description = "dsgrid CONUS 2022 Subsectors"
+name = "CONUS-2022-Detailed-Subsectors"
+type = "subsector"
 
 # [[dimensions.base_dimensions]] # TODO: this is what we ultimately want to be using for the project
-# type = "metric"
-# name = "CONUS-2022-Detailed-End-Uses"
+# class = "EnergyEndUse"
+# description = """
+# dsgrid CONUS 2022 End Uses
+# """
 # file = "dimensions/enduses.csv"
 # module = "dsgrid.dimension.standard"
-# class = "EnergyEndUse"
-# description = "dsgrid CONUS 2022 End Uses"
+# name = "CONUS-2022-Detailed-End-Uses"
+# type = "metric"
 
 [[dimensions.base_dimensions]] # TODO: this is for the dummy data deliverable
 type = "metric"
-name = "CONUS-2022-Detailed-End-Uses-kWh"
+description = """
+dsgrid CONUS 2022 End Uses (all fuel types) w/ all units in kWh
+"""
 file = "dimensions/enduses_kwh.csv"
 module = "dsgrid.dimension.standard"
+name = "CONUS-2022-Detailed-End-Uses-kWh"
 class = "EnergyEndUse"
-description = "dsgrid CONUS 2022 End Uses w/ all units in kWh"
+
 
 [[dimensions.base_dimensions]]
 class = "ModelYear"
@@ -95,7 +103,7 @@ and two light-duty vehicle electrification scenarios
 """
 file = "dimensions/scenarios.csv"
 module = "dsgrid.dimension.standard"
-name = "dsgrid CONUS 2022 scenarios"
+name = "CONUS-2022-scenarios"
 type = "scenario"
 
 [[dimensions.base_dimensions]]
@@ -105,7 +113,7 @@ dsgrid Standard Scenarios 2021 Data Sources; ComStock, TEMPO, ResStock Only
 """
 file = "dimensions/sources.csv"
 module = "dsgrid.dimension.standard"
-name = "Standard Scenarios 2021 DataSources - ComStock-ResStock-TEMPO-Only"
+name = "Data-Sources - ComStock-ResStock-TEMPO-Only"
 type = "data_source"
 
 [[dimensions.base_dimensions]]
@@ -113,7 +121,6 @@ class = "Time"
 frequency = "P0DT1H0M0.000000S"
 name = "Time-2012-UTC-houlry-periodBeginning-noDST-noLeapDayAdjustment-total"
 ranges = [{start = "2012-01-01 00:00:00", end = "2013-12-31 23:00:00"}]
-type = "time"
 time_type = "datetime"
 leap_day_adjustment = "none"
 description = """
@@ -123,6 +130,7 @@ time_interval_type = "period_beginning"
 str_format = "%Y-%m-%d %H:%M:%S"
 timezone = "UTC"
 measurement_type = "total"
+type = "time"
 
 [[dimensions.base_dimensions]]
 class = "WeatherYear"
@@ -153,6 +161,7 @@ description = """
 US Census Regions
 """
 file = "dimensions/supplemental/census_regions.csv"
+module = "dsgrid.dimension.standard"
 name = "US Census Regions"
 type = "geography"
 
@@ -162,14 +171,66 @@ description = """
 US Census Divisions
 """
 file = "dimensions/supplemental/census_divisions.csv"
+module = "dsgrid.dimension.standard"
 name = "US Census Divisions"
 type = "geography"
+
+[[dimensions.supplemental_dimensions]]
+class = "GeographyDimensionBaseModel" # <---- ?
+description = """
+ReEDS Power Control Areas
+"""
+file = "dimensions/supplemental/reeds_pca.csv"
+module = "dsgrid.dimension.standard"
+name = "ReEDS PCA"
+type = "geography"
+
+### All in one dims
+[[dimensions.supplemental_dimensions]]
+class = "Sector"
+description = """
+All Sectors
+"""
+file = "dimensions/supplemental/all_sectors.csv"
+module = "dsgrid.dimension.standard"
+name = "all-sectors"
+type = "sector"
+
+[[dimensions.supplemental_dimensions]]
+class = "Subsector"
+description = """
+All Subsectors
+"""
+file = "dimensions/supplemental/all_subsectors.csv"
+module = "dsgrid.dimension.standard"
+name = "all-subsectors"
+type = "subsector"
+
+[[dimensions.supplemental_dimensions]]
+class = "EnergyEndUse"
+description = """
+All Electric End Uses
+"""
+file = "dimensions/supplemental/all_electric_enduses.csv"
+module = "dsgrid.dimension.standard"
+name = "all-electric-end-uses"
+type = "metric"
+
+[[dimensions.supplemental_dimensions]]
+class = "DataSource"
+description = """
+All Data Sources
+"""
+file = "dimensions/supplemental/all_sources.csv"
+module = "dsgrid.dimension.standard"
+name = "all-data-sources"
+type = "data_source"
 
 # ------------------------------------------------------
 # Dimension Mappings
 # ------------------------------------------------------
 [[dimension_mappings.base_to_supplemental]]
-description = "Maps Comstock US Counties 2020 L48 to CensusRegion"
+description = "Maps US Counties 2020 L48 to CensusRegion"
 file = "dimension_mappings/base_to_supplemental/lookup_county_to_censusregion.csv"
 mapping_type = "many_to_one_aggregation"
 [dimension_mappings.base_to_supplemental.from_dimension]
@@ -180,8 +241,8 @@ name = "US Census Regions"
 type = "geography"
 
 [[dimension_mappings.base_to_supplemental]]
-description = "Maps Comstock US Counties 2020 L48 to CensusDivision"
-file = "dimension_mappings/base_to_supplemental/lookup_l48_county_to_censusdivision.csv"
+description = "Maps US Counties 2020 L48 to CensusDivision"
+file = "dimension_mappings/base_to_supplemental/lookup_county_to_censusdivision.csv"
 mapping_type = "many_to_one_aggregation"
 [dimension_mappings.base_to_supplemental.from_dimension]
 type = "geography"
@@ -191,7 +252,7 @@ name = "US Census Divisions"
 type = "geography"
 
 [[dimension_mappings.base_to_supplemental]]
-description = "Maps Comstock US Counties 2020 L48 to State"
+description = "Maps US Counties 2020 L48 to State"
 file = "dimension_mappings/base_to_supplemental/lookup_county_to_state.csv"
 mapping_type = "many_to_one_aggregation"
 [dimension_mappings.base_to_supplemental.from_dimension]
@@ -200,3 +261,59 @@ type = "geography"
 [dimension_mappings.base_to_supplemental.to_dimension]
 name = "US States"
 type = "geography"
+
+[[dimension_mappings.base_to_supplemental]]
+description = "Maps US Counties 2020 L48 to ReEDS Power Control Areas"
+file = "dimension_mappings/base_to_supplemental/lookup_county_to_reeds_pca.csv"
+mapping_type = "many_to_one_aggregation"
+[dimension_mappings.base_to_supplemental.from_dimension]
+name = "US Counties 2020 L48"
+type = "geography"
+[dimension_mappings.base_to_supplemental.to_dimension]
+name = "ReEDS PCA"
+type = "geography"
+
+### all to one ###
+[[dimension_mappings.base_to_supplemental]]
+description = "Aggregation map for Com-Res-Tra sectors"
+file = "dimension_mappings/base_to_supplemental/lookup_sectors_to_all_sectors.csv"
+mapping_type = "many_to_one_aggregation"
+[dimension_mappings.base_to_supplemental.from_dimension]
+name = "Sectors - Com-Res-Tra-Only"
+type = "sector"
+[dimension_mappings.base_to_supplemental.to_dimension]
+name = "all-sectors"
+type = "sector"
+
+[[dimension_mappings.base_to_supplemental]]
+description = "Aggregation map for all dsgrid CONUS 2022 subsectors"
+file = "dimension_mappings/base_to_supplemental/lookup_subsectors_to_all_subsectors.csv"
+mapping_type = "many_to_one_aggregation"
+[dimension_mappings.base_to_supplemental.from_dimension]
+name = "CONUS-2022-Detailed-Subsectors"
+type = "subsector"
+[dimension_mappings.base_to_supplemental.to_dimension]
+name = "all-subsectors"
+type = "subsector"
+
+[[dimension_mappings.base_to_supplemental]]
+description = "Aggregation map for ComStock-ResStock-TEMPO data sources"
+file = "dimension_mappings/base_to_supplemental/lookup_sources_to_all_sources.csv"
+mapping_type = "many_to_one_aggregation"
+[dimension_mappings.base_to_supplemental.from_dimension]
+name = "Data-Sources - ComStock-ResStock-TEMPO-Only"
+type = "data_source"
+[dimension_mappings.base_to_supplemental.to_dimension]
+name = "all-data-sources"
+type = "data_source"
+
+[[dimension_mappings.base_to_supplemental]]
+description = "Aggregation map for all dsgrid CONUS 2022 electric end uses"
+file = "dimension_mappings/base_to_supplemental/lookup_enduses_to_all_electric_enduses.csv"
+mapping_type = "many_to_one_aggregation"
+[dimension_mappings.base_to_supplemental.from_dimension]
+name = "CONUS-2022-Detailed-End-Uses-kWh"
+type = "metric"
+[dimension_mappings.base_to_supplemental.to_dimension]
+name = "all-electric-end-uses"
+type = "metric"
