--- a/dsgrid_project/datasets/sector_models/comstock/dataset.toml
+++ b/dsgrid_project/datasets/sector_models/comstock/dataset.toml
@@ -5,8 +5,6 @@
 dataset_id = "conus_2022_reference_comstock"
 dataset_type = "sector_model"
 data_source = "comstock"
-
-path = "/Users/lliu2/Downloads/end_use_time_wrapped_com"
 description = """
 Time-shifted and filled for Dec31, simulated on 09/29/2021 using:
 Comstock SHA: 00a3f79bab74d7fb8b71e7897486eb54b51277fc and
@@ -101,6 +99,16 @@ description = """
 Model year: 2018
 """
 
+[[dimensions]] # shared with project
+class = "WeatherYear"
+description = """
+Weather year, 2012 only
+"""
+file = "../../../dimensions/weather_years.csv"
+module = "dsgrid.dimension.standard"
+name = "2012 Weather Year"
+type = "weather_year"
+
 # [[dimensions]] # for real dataset
 # name = "Time-2012-UTC-8784-hourly-periodEnding-total-Hour6Start-localRangesTZ"
 # type = "time"
@@ -132,9 +140,3 @@ leap_day_adjustment = "none"
 time_interval_type = "period_ending"
 timezone = "UTC"
 ranges = [{start = "2012-01-01 00:00:00", end = "2012-12-31 23:00:00"}]
-
-[[dimension_references]]
-type = "weather_year"
-dimension_id = "2012_weather_year__78aeebf8-788c-4ffa-8df2-f581cf0e4d96"
-version = "1.0.0"
-
