--- a/dsgrid_project/datasets/sector_models/resstock/dataset.toml
+++ b/dsgrid_project/datasets/sector_models/resstock/dataset.toml
@@ -5,8 +5,6 @@
 dataset_id = "conus_2022_reference_resstock"
 dataset_type = "sector_model"
 data_source = "resstock"
-
-path = "/Users/lliu2/Downloads/end_use_time_wrapped_res"
 description = """
 Time-wrapped, simulated on 09/15/2021 using: 
 ResStock version: https://github.com/NREL/resstock/releases/tag/eulp_final and
@@ -99,6 +97,16 @@ description = """
 Model year, 2018 only
 """
 
+[[dimensions]] # shared with project
+class = "WeatherYear"
+description = """
+Weather year, 2012 only
+"""
+file = "../../../dimensions/weather_years.csv"
+module = "dsgrid.dimension.standard"
+name = "2012 Weather Year"
+type = "weather_year"
+
 # [[dimensions]] # for real dataset
 # name = "Time-2012-UTC-8784-hourly-periodEnding-total-Hour6Start-localRangesTZ"
 # type = "time"
@@ -130,9 +138,3 @@ leap_day_adjustment = "none"
 time_interval_type = "period_ending"
 timezone = "UTC"
 ranges = [{start = "2012-01-01 00:00:00", end = "2012-12-31 23:00:00"}]
-
-[[dimension_references]]
-type = "weather_year"
-dimension_id = "2012_weather_year__78aeebf8-788c-4ffa-8df2-f581cf0e4d96"
-version = "1.0.0"
-
