Add display_name for all dimensions

--- a/dsgrid_project/datasets/sector_models/comstock/dataset.toml
+++ b/dsgrid_project/datasets/sector_models/comstock/dataset.toml
@@ -30,6 +30,7 @@ load_data_column_dimension = "metric"
 [[dimensions]]
 type = "geography"
 name = "conus_2022-comstock_US_county_FIP"
+display_name = "County"
 file = "dimensions/conus_2022-comstock_geography_county_fips.csv"
 module = "dsgrid.dimension.standard"
 class = "County"
@@ -42,6 +43,7 @@ includes 23 AK counties, 1 county renamed in 2015 (SD, Shannon County -> SD, Ogl
 [[dimensions]]
 type = "sector"
 name = "commercial-sector"
+display_name = "Sector"
 file = "dimensions/sector_commercial.csv"
 module = "dsgrid.dimension.standard"
 class = "Sector"
@@ -52,6 +54,7 @@ Commercial sector only
 [[dimensions]]
 type = "subsector"
 name = "conus_2022-comstock_building_types"
+display_name = "Subsector"
 file = "dimensions/conus_2022-comstock_subsectors.csv"
 module = "dsgrid.dimension.standard"
 class = "Subsector"
@@ -62,6 +65,7 @@ CONUS 2022 - ComStock building types (N=14)
 [[dimensions]]
 type = "metric"
 name = "conus_2022-comstock_energy_enduses_kwh"
+display_name = "Energy End Use"
 file = "dimensions/conus_2022-comstock_end_uses.csv"
 module = "dsgrid.dimension.standard"
 class = "EnergyEndUse"
@@ -72,6 +76,7 @@ CONUS 2022 - ComStock end uses (N=21, 4 fuel types)
 [[dimensions]]
 type = "scenario"
 name = "Conus-2022"
+display_name = "Scenario"
 file = "../resstock/dimensions/scenario_conus_2022_reference.csv"
 module = "dsgrid.dimension.standard"
 class = "Scenario"
@@ -82,6 +87,7 @@ Scenario: CONUS (Continental U.S.) 2022 Reference
 [[dimensions]]
 type = "data_source"
 name = "Comstock-Data-Source"
+display_name = "Data Source"
 file = "dimensions/data_source_comstock.csv"
 module = "dsgrid.dimension.standard"
 class = "DataSource"
@@ -92,6 +98,7 @@ Data source: ComStock
 [[dimensions]]
 type = "model_year"
 name = "Model-Year-2018"
+display_name = "Model Year"
 file = "../resstock/dimensions/model_year_2018.csv"
 module = "dsgrid.dimension.standard"
 class = "ModelYear"
@@ -107,10 +114,12 @@ Weather year, 2012 only
 file = "../../../dimensions/weather_years.csv"
 module = "dsgrid.dimension.standard"
 name = "2012 Weather Year"
+display_name = "Weather Year"
 type = "weather_year"
 
 # [[dimensions]] # for real dataset
 # name = "Time-2012-UTC-8784-hourly-periodEnding-total-Hour6Start-localRangesTZ"
+# display_name = "Timestamp"
 # type = "time"
 # module = "dsgrid.dimension.standard"
 # class = "Time"
@@ -128,6 +137,7 @@ type = "weather_year"
 
 [[dimensions]] # for time-wrapped dataset
 name = "Time-2012-UTC-8784-hourly-periodEnding-total-Hour0Start"
+display_name = "Timestamp"
 type = "time"
 module = "dsgrid.dimension.standard"
 class = "Time"
