--- a/dsgrid_project/datasets/sector_models/resstock/dataset.toml
+++ b/dsgrid_project/datasets/sector_models/resstock/dataset.toml
@@ -30,6 +30,7 @@ load_data_column_dimension = "metric"
 [[dimensions]]
 type = "geography"
 name = "conus_2022-resstock_US_county_FIP"
+display_name = "County"
 file = "dimensions/conus_2022-resstock_geography_county_fips.csv"
 module = "dsgrid.dimension.standard"
 class = "County"
@@ -40,6 +41,7 @@ CONUS 2022 - ResStock US county in original FIP code (N=3,108)
 [[dimensions]]
 type = "sector"
 name = "residential-sector"
+display_name = "Sector"
 file = "dimensions/sector_residential.csv"
 module = "dsgrid.dimension.standard"
 class = "Sector"
@@ -50,6 +52,7 @@ Residential sector only
 [[dimensions]]
 type = "subsector"
 name = "conus_2022-resstock_building_types"
+display_name = "Subsector"
 file = "dimensions/conus_2022-resstock_subsectors.csv"
 module = "dsgrid.dimension.standard"
 class = "Subsector"
@@ -60,6 +63,7 @@ CONUS 2022 - ResStock building types (N=5)
 [[dimensions]]
 type = "metric"
 name = "conus_2022-resstock_energy_enduses_kwh"
+display_name = "Energy End Use"
 file = "dimensions/conus_2022-resstock_end_uses.csv"
 module = "dsgrid.dimension.standard"
 class = "EnergyEndUse"
@@ -70,6 +74,7 @@ CONUS 2022 - ResStock end uses (N=48, 5 fuel types)
 [[dimensions]]
 type = "data_source"
 name = "ResStock-Data-Source"
+display_name = "Data Source"
 file = "dimensions/data_source_resstock.csv"
 module = "dsgrid.dimension.standard"
 class = "DataSource"
@@ -80,6 +85,7 @@ ResStock only data source
 [[dimensions]]
 type = "scenario"
 name = "Conus-2022-reference"
+display_name = "Scenario"
 file = "dimensions/scenario_conus_2022_reference.csv"
 module = "dsgrid.dimension.standard"
 class = "Scenario"
@@ -90,6 +96,7 @@ Scenario: CONUS (Continental U.S.) 2022 Reference
 [[dimensions]]
 type = "model_year"
 name = "Model-Year-2018"
+display_name = "Model Year"
 file = "dimensions/model_year_2018.csv"
 module = "dsgrid.dimension.standard"
 class = "ModelYear"
@@ -105,10 +112,12 @@ Weather year, 2012 only
 file = "../../../dimensions/weather_years.csv"
 module = "dsgrid.dimension.standard"
 name = "2012 Weather Year"
+display_name = "Weather Year"
 type = "weather_year"
 
 # [[dimensions]] # for real dataset
 # name = "Time-2012-UTC-8784-hourly-periodEnding-total-Hour6Start-localRangesTZ"
+# display_name = "Timestamp"
 # type = "time"
 # module = "dsgrid.dimension.standard"
 # class = "Time"
@@ -126,6 +135,7 @@ type = "weather_year"
 
 [[dimensions]] # for time-wrapped dataset
 name = "Time-2012-UTC-8784-hourly-periodEnding-total-Hour0Start"
+display_name = "Timestamp"
 type = "time"
 module = "dsgrid.dimension.standard"
 class = "Time"
