--- a/dsgrid_project/project.toml
+++ b/dsgrid_project/project.toml
@@ -118,16 +118,16 @@ type = "data_source"
 [[dimensions.base_dimensions]]
 class = "Time"
 frequency = "P0DT1H0M0.000000S"
-name = "Time-2012-UTC-hourly-periodBeginning-noDST-noLeapDayAdjustment-total"
-ranges = [{start = "2012-01-01 00:00:00", end = "2013-12-31 23:00:00"}]
+name = "Time-2012-EST-hourly-periodBeginning-noLeapDayAdjustment-total"
+ranges = [{start = "2012-01-01 00:00:00", end = "2012-12-31 23:00:00"}]
 time_type = "datetime"
 leap_day_adjustment = "none"
 description = """
-Time dimension, 2012 hourly UTC, hour-beginning, no DST, no Leap Day Adjustment, total value
+Time dimension, 2012 hourly EST, hour-beginning, no Leap Day Adjustment, total value
 """
 time_interval_type = "period_beginning"
 str_format = "%Y-%m-%d %H:%M:%S"
-timezone = "UTC"
+timezone = "EST"
 measurement_type = "total"
 type = "time"
 
@@ -175,7 +175,7 @@ name = "US Census Divisions"
 type = "geography"
 
 [[dimensions.supplemental_dimensions]]
-class = "GeographyDimensionBaseModel" # <---- ?
+class = "GeographyDimensionBaseModel"
 description = """
 ReEDS Power Control Areas
 """
